Fix auto dark mode v2

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,11 +2,19 @@
   box-sizing: border-box;
 }
 
+
+/* Samsung / Chrome auto dark-mode killer */
+* {
+  forced-color-adjust: none;
+}
+
+
 html, body {
   margin: 0;
   font-family: "IBM Plex Mono", monospace;
   background: #f9f7f7ac;
   color: #2b2b2b;
+  background-color: #f9f7f7ac;
 }
 
 html {
